tests/lang/frontend/lexer/unterminated-nested-comment.cxy
// @TEST: FileCheck

// CHECK: error: unterminated block comment
/*
  /* Unterminated nested block comment */
